--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <section>
       <h3>Резюме</h3>
-      <p>Працюю з великими мовними моделями з 2020 року. Фокус&nbsp;— проектування промптів, експерименти з RAG‑системами, багатомодельні ланцюжки та швидке рішення задач без глибокої розробки. Пишу невеликі Python‑скрипти для інтеграцій, але головна цінність&nbsp;— логічна постановка й тестування ідей.</p>
+      <p>Експериментую та працюю з великими мовними моделями з 2020 року. Фокус&nbsp;— проектування промптів, експерименти з RAG‑системами, багатомодельні ланцюжки та логічних ланцюжків під задачі. логічна постановка, визначення найкоротших шляхів, автоматизація та тестування ідей&nbsp;— основні напрями моєї діяльності.</p>
     </section>
 
     <section>
