--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ ul.square li{margin-bottom:6px;font-size:.95rem}
     <section>
       <h3>Освіта & Самоосвіта</h3>
       <ul class="square">
-        <li><strong>Магістр психології</strong> — University Name (2018)</li>
+        <li><strong>Магістр психології (широкий профіль) </strong> — КПНУ ім. І. Огієнка (2018)</li>
         <li>Постійне само‑навчання: OpenAI, Google, Anthropic (Prompt Engineering, RAG, LLM Safety)</li>
       </ul>
     </section>
