--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                     </ul>
                 </div>
                  <div class="job-item">
-                    <h3>CCD (Contextual Chain-of-Thought Distillation) Algorithm</h3>
+                    <h3>CCD (Cycle of Conscious Decisions) Algorithm</h3>
                     <ul>
                         <li>Developed a proprietary prompt-engineering methodology for one-shot generation of deeply structured, high-quality responses from LLMs, optimizing for reasoning over token count.</li>
                     </ul>
