--- a/index.html
+++ b/index.html
@@ -267,8 +267,7 @@
                 <div class="job-item">
                     <h3>Core Techniques & Approach</h3>
                     <ul>
-                        <li>Practical experience in prompt design: crafting instructions for one-shot, few-shot, and Chain-of-Thought reasoning.</li>
-                        <li>Ability to design prompts that produce structured outputs (e.g., JSON, categorized text) aligned with business metrics and human scoring.</li>
+                        <li>Practical experience in prompt design: crafting instructions for one-shot, few-shot, and Chain-of-Thought reasoning, along with an understanding of the obsolescence of these techniques in current LLM generation models. </li>
                         <li>Leverages M.A. in Psychology to create nuance- and empathy-driven prompts, particularly for analyzing conversational data.</li>
                     </ul>
                 </div>
